...
        ) {
            OutlinedTextField(
                value = texto,
                onValueChange = onTextoChange,
                modifier = Modifier
                    .weight(1f)
                    .height(50.dp).testTag("input_search"),
                placeholder = { Text("O que procuras?", fontSize = 14.sp) },
                leadingIcon = { Icon(Icons.Default.Search, contentDescription = null, tint = Color.Gray) },
                trailingIcon = {
                    if (texto.isNotEmpty()) {
                        IconButton(onClick = onLimpar) {
                            Icon(Icons.Default.Close, contentDescription = "Limpar")
...

            Spacer(modifier = Modifier.width(8.dp))

            IconButton(onClick = {
                onFilterClick()
            },
                modifier = Modifier.testTag("btn_open_filters")
            ) {
                Icon(Icons.Default.Tune, contentDescription = "Filtros", tint = MaterialTheme.colorScheme.primary)
            }
        }
    }
}
