...
                        }
                    }
                },
                label = { Text("De (€)") },
                modifier = Modifier
                    .width(100.dp)
                    .testTag("input_price_min"),
                keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
                singleLine = true
            )

            OutlinedTextField(
                value = maxText,
...
                        }
                    }
                },
                label = { Text("Até (€)") },
                modifier = Modifier
                    .width(100.dp)
                    .testTag("input_price_max"),
                keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
                singleLine = true
            )
        }

        RangeSlider(
...
