...
            Button(
                onClick = {
                    onDismiss()
                },
                modifier = Modifier
                    .align(Alignment.CenterHorizontally)
                    .testTag("btn_apply_filters")
            ) {
                Text("Aplicar")
            }
        }
    }
}
